# habit-arc

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile  fly.toml
backend/migrations/: 20240101000001_initial.sql  20240101000002_prd_alignment.sql
backend/migrations_v2/: 000_README.md  20260210000001_enums_and_functions.down.sql  20260210000001_enums_and_functions.sql  20260210000002_users.down.sql  20260210000002_users.sql  20260210000003_habits_and_schedules.down.sql  20260210000003_habits_and_schedules.sql  20260210000004_habit_completions.down.sql  20260210000004_habit_completions.sql  20260210000005_mood_logs.down.sql  20260210000005_mood_logs.sql  20260210000006_insights.down.sql  20260210000006_insights.sql  20260210000007_subscriptions_and_entitlements.down.sql  20260210000007_subscriptions_and_entitlements.sql  20260210000008_refresh_tokens.down.sql  20260210000008_refresh_tokens.sql  20260210000009_notification_jobs.down.sql  20260210000009_notification_jobs.sql  20260210000010_audit_logs.down.sql  20260210000010_audit_logs.sql  20260210000011_seed_dev_data.down.sql  20260210000011_seed_dev_data.sql  20260210000012_demo_mode.down.sql  20260210000012_demo_mode.sql  20260210000013_habits_schema_reconcile.down.sql  20260210000013_habits_schema_reconcile.sql  20260210000014_add_subscription_cols_to_users.down.sql  20260210000014_add_subscription_cols_to_users.sql  QUERIES.sql  SQLX_NOTES.md
backend/src/: config.rs  dto.rs  error.rs  main.rs
backend/src/auth/: jwt.rs  middleware.rs  password.rs  rate_limit.rs
backend/src/db/: pool.rs
backend/src/handlers/: auth.rs  (+9 more)
(+83 files in other folders)
