[package]
name = "habitarc-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
deadpool-postgres = "0.12"
tokio-postgres = "0.7"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Config
dotenvy = "0.15"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# HTTP client (for Stripe, Claude API)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Stripe
async-stripe = { version = "0.34", features = ["runtime-tokio-hyper"] }

# WebSocket
futures-util = "0.3"

# Validation
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
